--- a/ICT/PR8/PR8.tex
+++ b/ICT/PR8/PR8.tex
@@ -38,9 +38,7 @@
 
 \begin{itemize}
 	\item Ускорение поиска необходимого тюнинга для оружия;	
-	\item Помощь в нахождении необходимого тюнинга;
-	\item Повышение уровня удобства взаимодействия пользователя с интерфейсом системы;
-	\item Повышение качества информации.
+	\item Помощь в нахождении необходимого тюнинга.
 \end{itemize}
 
 
@@ -79,7 +77,7 @@
 Минимальное количество персонала, требуемого для работы программы, должно
 составлять не менее 3 штатных единиц — менеджер, модератор и консультант. Весь персонал должен иметь хорошие знания в области оружия и разбираться в нем.
 
-Менеджер должен отвечать за базу данных запчастей запчастей, которую он обязан редактировать в случае обновления или появления новой информации.  В обязанности модератора входит проверка и публикация комментариев пользователей, а консультант должен отвечать на вопросы, которые отправляют ему авторизованные пользователи.
+Менеджер должен отвечать за базу данных запчастей, которую он обязан редактировать в случае обновления или появления новой информации.  В обязанности модератора входит проверка и публикация комментариев пользователей, а консультант должен отвечать на вопросы, которые отправляют ему авторизованные пользователи.
 
 \subsection{Требования к надежности}
 Спроектированные архитектурные решения системы должны быть устойчивы по отношению к программно-аппаратным ошибкам, отказам технических и программных средств, с возможностью восстановления ее работоспособности и целостности информационного содержимого при возникновении ошибок и отказов.
