--- a/ICT/PR8/PR8.tex
+++ b/ICT/PR8/PR8.tex
@@ -49,7 +49,7 @@
 Под мобильными устройствами в целях настоящего документа понимаются смартфоны и планшетные компьютеры, работающие под управлением мобильных операционных систем (iOS, Android) и имеющие доступ к сети Интернет.
 
 \chapter{Требования к приложению}
-\section{требования к системе в целом}
+\section{Требования к системе в целом}
 \subsection{Требования к режимам функционирования}
 Для системы устанавливаются следующие режимы функционирования:
 \begin{itemize}
