--- a/ICT/KR/KR.tex
+++ b/ICT/KR/KR.tex
@@ -490,7 +490,7 @@
 объекта автоматизации к вводу системы в действие}
 Для обеспечения готовности объекта к вводу системы в действие провести комплекс мероприятий:
 \begin{itemize}
-	\item приобрести компоненты технического и программного обеспечения, заключить договора на их лицензионное использование;
+	\item приобрести компоненты технического и программного обеспечения, заключить договоры на их лицензионное использование;
 	\item завершить работы по установке технических средств;
 	\item провести обучение членов административной группы
 \end{itemize}
