--- a/ICT/PR8/PR8.tex
+++ b/ICT/PR8/PR8.tex
@@ -200,6 +200,20 @@
 
 
 \chapter{Порядок контроля и приемки приложения}
+
+Тестирование системы должно проводиться по следующим этапам:
+\begin{itemize}
+	\item тестирование регистрации пользователя;
+	\item тестирование авторизации пользователя;
+	\item тестирование изменений логина и пароля пользователя;
+	\item тестирование функции изменения базы данных запчастей;
+	\item тестирование основных функций приложения - просмотр и поиск в каталоге, просмотр запчастей в 3D-виде, добавление и удаление запчастей из избранного, сравнение запчастей по характеристикам;
+	\item тестирование ситуации "не нашлось совпадений по запросу"\ в каталоге;
+	\item тестирование работы кнопок перехода между вкладками;
+	\item тестирование функций просмотра и добавления комментариев;
+	\item тестирование общения пользователя с онлайн-консультантом через специальное окно.
+\end{itemize}
+
 Ответственность за организацию и проведение приемки системы должен нести Заказчик. Приемка системы должна производиться по завершению приемки всех задач системы. При этом необходимо предоставить обеспечение материальной частью (технические средства), проектной документацией и специально выделенным персоналом.
 
 Заказчик должен предъявлять систему ведомственной приемочной комиссии, при этом он обязан обеспечить нормальные условия работы данной комиссии в соответствии с принятой программой приемки.
@@ -211,7 +225,7 @@
 объекта автоматизации к вводу системы в действие}
 Для обеспечения готовности объекта к вводу системы в действие провести комплекс мероприятий:
 \begin{itemize}
-	\item приобрести компоненты технического и программного обеспечения, заключить договора на их лицензионное использование;
+	\item приобрести компоненты технического и программного обеспечения, заключить договоры на их лицензионное использование;
 	\item завершить работы по установке технических средств;
 	\item провести обучение членов административной группы
 \end{itemize}
