--- a/Informatic/labs/6_lab/refs.bib
+++ b/Informatic/labs/6_lab/refs.bib
@@ -1,4 +1,9 @@
+@misc{tip, 
+    title={Индивидуальные домашние задания по высшей математике},
+    author={О. В. Сильванович and Г. В. Тимофеева},
+    howpublished ={СПб: Университет ИТМО, 2018. \--- \ 66 с.}
+}
 @misc{desmos,
- title={Desmos},
- howpublished = {URL: {\color{cyan}https://www.desmos.com/calculator/}}
+    title={Desmos},
+    howpublished = {URL: {\color{cyan}https://www.desmos.com/calculator/}}
 }
