--- a/Informatic/labs/6_lab/content.tex
+++ b/Informatic/labs/6_lab/content.tex
@@ -50,7 +50,7 @@ $x = 3$ производная меняет знак с минуса на плю
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[scale=1]{prom}
-		\caption{Промежутки монотонности функции $y = \frac{x^2-3}{x-2}$}
+		\caption{Промежутки монотонности функции $\eqref{eq:eq1}$}
 		\label{pic:prom}
 	\end{center}
 \end{figure}
@@ -83,7 +83,7 @@ $x = 3$ производная меняет знак с минуса на плю
 
 Проверим наличие наклонной асимптоты $y = kx + b$: $k = \lim\limits_{x\to \pm \infty} \frac{f(x)}{x} = \lim\limits_{x\to \pm \infty} \frac{x^2-3}{x(x-2)} = 1,$ $b = \lim\limits_{x\to \pm \infty} f(x) - kx = \lim\limits_{x\to \pm \infty} \left(\frac{x^2-3}{(x-2)}-x\right) = \lim\limits_{x\to \pm \infty} \left(\frac{x^2-3-x(x-2)}{(x-2)}\right) = \lim\limits_{x\to \pm \infty}\left(\frac{2x-3}{x-2}\right) = 2.$
 
-Значит, прямая $y = x + 2$ - наклонная асимптота.
+Значит, прямая $y = x + 2$ наклонная асимптота.
 
 \subsection{Нахождение пересечений с осями координат}
 
