--- a/Informatic/labs/6_lab/content.tex
+++ b/Informatic/labs/6_lab/content.tex
@@ -9,12 +9,12 @@
 
  Исследование функции будет проводиться по следующей схеме:
 \begin{itemize}
-    \item Нахождение области значения функции.
-    \item Проверка на периодичность.
-    \item Исследование функции с помощью первой производной.
-    \item Исследование функции с помощью второй производной.
-    \item Проверка на наличие вертикальных, горизонтальных и наклонных асимптот графика функции.
-    \item Нахождение точек пересечения графика с координатными осями.
+    \item нахождение области значения функции;
+    \item проверка на периодичность;
+    \item исследование функции с помощью первой производной;
+    \item исследование функции с помощью второй производной;
+    \item проверка на наличие вертикальных, горизонтальных и наклонных асимптот графика функции;
+    \item нахождение точек пересечения графика с координатными осями.
 \end{itemize}
 
 \addcontentsline{toc}{section}{Введение}
@@ -44,8 +44,8 @@
 
 Тогда $y' = 0$ при $x_1 = 1, x_2 = 3$.
 
-Проверим знаки производной и определим промежутки монотонности функции (рисунок \ref{pic:prom}). Таким образом, функция $\eqref{eq:eq1}$ возрастает при $x \in (-\infty;1) \cup (3; =\infty)$ и убывает при $x \in (1;2) \cup (2;3)$. Далее, так как при переходе через стационарную точку $x = 1$ производная меняет знак с плюса на минус, то $x=1$ - точка максимума $(y_{max} = y(1) = 2)$. Аналогично, при переходе через стационарную точку
-$x = 3$ производная меняет знак с минуса на плюс, поэтому $x = 3$ - точка минимума $(y_{min} = y(3) = 6)$
+Проверим знаки производной и определим промежутки монотонности функции (рисунок \ref{pic:prom}). Таким образом, функция $\eqref{eq:eq1}$ возрастает при $x \in (-\infty;1) \cup (3; +\infty)$ и убывает при $x \in (1;2) \cup (2;3)$. Далее, так как при переходе через стационарную точку $x = 1$ производная меняет знак с плюса на минус, то $x=1$ точка максимума $(y_{max} = y(1) = 2)$. Аналогично, при переходе через стационарную точку
+$x = 3$ производная меняет знак с минуса на плюс, поэтому $x = 3$ точка минимума $(y_{min} = y(3) = 6)$
 
 \begin{figure}[H]
 	\begin{center}
