--- a/Informatic/labs/6_lab/refs.bib
+++ b/Informatic/labs/6_lab/refs.bib
@@ -1,9 +1,22 @@
 @misc{tip, 
     title={Индивидуальные домашние задания по высшей математике},
     author={О. В. Сильванович and Г. В. Тимофеева},
-    howpublished ={СПб: Университет ИТМО, 2018. \--- \ 66 с.}
+    howpublished={СПб: Университет ИТМО, 2018. \--- \ 66 с.}
 }
 @misc{desmos,
     title={Desmos},
-    howpublished = {URL: {\color{cyan}https://www.desmos.com/calculator/}}
+    howpublished={URL: {\color{cyan}https://www.desmos.com/calculator/}}
 }
+
+% если без костылей (но не работает шрифт и что-то не показывается)
+% @misc{tip, 
+%    title={Индивидуальные домашние задания по высшей математике},
+%    author={О. В. Сильванович and Г. В. Тимофеева},
+%    year={2018},
+%    publisher={СПб: Университет ИТМО},
+%    pages={66}
+% }
+% @misc{desmos,
+%    title={Desmos},
+%    url={https://www.desmos.com/calculator/}
+% }
